--- a/style.css
+++ b/style.css
@@ -1,13 +1,34 @@
 @charset "UTF-8";
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.shutter{
+    position:fixed;
+    background-color: aliceblue;
+
+}
 header {
     right:0px;
     top:0px;
     height:80px;
     width:100%;
     background-color: aliceblue;
-    position:fixed
+    position:fixed;
+    z-index:10;
+    text-align: center;
 
+}
+.header2{
+    margin: 0;
+    padding: 0;
+    background-attachment: fixed;
+}
+.header2char{
+    font: size 1000px;
+    text-align: center;
 }
 .title{
     margin-top: auto;
@@ -18,7 +39,37 @@ font-weight: 400;
 font-style: normal;
 color:black;
 }
+h3{
+    font-family: vdl-megamaru, sans-serif;
+}
+.sekiguti{
+    font-family: vdl-megamaru, sans-serif;
 
+    border:3px dotted;
+    border-radius: 15px;
+    display:inline-block;
+}
+.honbun{
+    text-align: center;
+}
+ul{
+    width: 500px;
+    text-align: center;
+}
+li{
+    display: flex;
+    padding:15px;
+    border-bottom:1px solid #000;
+    text-align: center;
+}
+
+.day{
+    
+}
+
+.content{
+    text-align: center;
+}
 h2{
     font-family: cofo-kabeltouw-stencil-20, sans-serif;
 font-weight: 400;
