--- a/style.css
+++ b/style.css
@@ -49,6 +49,50 @@ h3{
     border-radius: 15px;
     display:inline-block;
 }
+.container {
+    display: flex;
+    justify-content: center;
+    lign-items: flex-start;
+    ap: 40px;
+}
+.character {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.kangei {
+    font-family: vdl-megamaru, sans-serif;
+    position: relative;
+    background: #adb7bf;
+    border: 2px solid #000000;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    color: #333;
+    display: inline-block;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+}
+
+.kangei::after {
+    content: "";
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    border: 8px solid transparent;
+    border-top: 15px solid #adb7bf;
+}
+
+.mikusama {
+    width: 300px;
+    height: auto;
+}
+a{
+    position:inline-block;
+    vertical-align:  middle;   
+}
 .honbun{
     text-align: center;
 }
@@ -66,7 +110,6 @@ li{
 .day{
     
 }
-
 .content{
     text-align: center;
 }
