--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ a{
     vertical-align:  middle;   
 }
 .honbun{
+    font-family: vdl-megamaru, sans-serif;
     text-align: center;
 }
 ul{
@@ -134,6 +135,9 @@ font-style: normal;
 }
 .menu.open {
     right: 0;
+}
+h3{
+    
 }
 .hamburger{
     position: fixed;
