--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ font-style: normal;
     top: 0;
     right: -100%;
     width: 300px;
-    height: 100%
-    background-color #00a3af;
+    height: 100%;
+    background-color:  #f0f8ff;
     color:#333;
     transition: right 0.3s ease;
     padding: 20px;
