--- a/contact/style.css
+++ b/contact/style.css
@@ -32,12 +32,18 @@ h3{
     font-family: vdl-megamaru, sans-serif;
     text-align:center;
 }
+li{
+    display: flex;
+    padding:15px;
+    border-bottom:1px solid #000;
+    text-align: center;
+}
 .footer{  
     width:100%;
     height: 40px;
     position: absolute;
-    bottom: 0;
     background-color: aliceblue;
+    text-align: center;
 }
 .wrap{
     position:relative;
