--- a/inform/style.css
+++ b/inform/style.css
@@ -17,7 +17,19 @@ h1{
 font-weight: 400;
 font-style: normal;
 }
-
+.footer{  
+    width:100%;
+    height: 40px;
+    position: absolute;
+    background-color: aliceblue;
+    text-align: center;
+}
+li{
+    display: flex;
+    padding:15px;
+    border-bottom:1px solid #000;
+    text-align: center;
+}
 h2{
     font-family: cofo-kabeltouw-stencil-20, sans-serif;
 font-weight: 400;
