--- a/style.css
+++ b/style.css
@@ -129,6 +129,13 @@ font-style: normal;
 .nicologo{
     width:60px;
 }
+.footer{  
+    width:100%;
+    height: 40px;
+    position: absolute;
+    background-color: aliceblue;
+    text-align: center;
+}
 .menu{
     font-family: vdl-megamaru, sans-serif;
     position:fixed;
