--- a/inform/style.css
+++ b/inform/style.css
@@ -1,12 +1,17 @@
 @charset "UTF-8";
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
 header {
     right:0px;
     top:0px;
     height:80px;
     width:100%;
     background-color: aliceblue;
-    position:fixed
+    position:fixed;
+    text-align: center;
 
 }
 .title{
@@ -37,13 +42,19 @@ font-size: 35;
 font-style: normal;
 text-align:center;
 }
+.honbun{
+    font-family: vdl-megamaru, sans-serif;
+    text-align: center;
+}
+.tweet{
+}
 .menu{
     position:fixed;
     top: 0;
     right: -100%;
     width: 300px;
-    height: 100%
-    background-color #00a3af;
+    height: 100%;
+    background-color:  #f0f8ff;
     color:#333;
     transition: right 0.3s ease;
     padding: 20px;
