--- a/strage/style.css
+++ b/strage/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+html, body {
+    margin: 0;
+    padding: 0;
+}
 header {
     right:0px;
     top:0px;
@@ -10,9 +13,9 @@ header {
 
 }
 .footer{  
-    font-family: sans-serif;
     width:100%;
     height: 40px;
+    position: absolute;
     background-color: aliceblue;
     text-align: center;
 }
