--- a/strage/style.css
+++ b/strage/style.css
@@ -15,7 +15,6 @@ header {
 .footer{  
     width:100%;
     height: 40px;
-    position: absolute;
     background-color: aliceblue;
     text-align: center;
 }
@@ -56,7 +55,6 @@ font-weight: 400;
 font-style: normal;
 }
 p{
-    font-family: vdl-megamaru, sans-serif;
     text-align: center;
 }
 .subtitle{
@@ -64,6 +62,7 @@ p{
     text-align: center;
 }
 .honbun{
+    text-align: center;
     font-family: vdl-megamaru, sans-serif;
 
 }
